[gd_scene load_steps=8 format=3 uid="uid://dtsuakqnhpib7"]

[ext_resource type="Script" uid="uid://dmlw8tod4g8c8" path="res://assets/player/body_manager/body_manager.gd" id="1_w5am2"]
[ext_resource type="Script" uid="uid://chmscgicdmmmp" path="res://assets/player/body_manager/chest.gd" id="2_ljpjp"]
[ext_resource type="Script" uid="uid://bml74jl5pkxmq" path="res://assets/player/body_manager/foot.gd" id="3_isnvb"]

[sub_resource type="SphereMesh" id="SphereMesh_4flbx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_toylo"]
albedo_color = Color(0.0295066, 0.0295066, 0.0295066, 1)

[sub_resource type="SphereMesh" id="SphereMesh_toylo"]

[sub_resource type="SphereMesh" id="SphereMesh_tb4ck"]

[node name="BodyManager" type="Node3D"]
script = ExtResource("1_w5am2")

[node name="Chest" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.45826, 0)
script = ExtResource("2_ljpjp")

[node name="Head" type="Node3D" parent="Chest"]
unique_name_in_owner = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Chest/Head"]
transform = Transform3D(0.735311, 0, 0, 0, 0.735311, 0, 0, 0, 0.735311, 0, -0.592256, 0)
mesh = SubResource("SphereMesh_4flbx")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Chest/Head"]
transform = Transform3D(0.290476, 0, 0, 0, 0.290476, 0, 0, 0, 0.290476, 0.212631, -0.500505, -0.22252)
material_override = SubResource("StandardMaterial3D_toylo")
mesh = SubResource("SphereMesh_toylo")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Chest/Head"]
transform = Transform3D(0.290476, 0, 0, 0, 0.290476, 0, 0, 0, 0.290476, -0.213, -0.501, -0.223)
material_override = SubResource("StandardMaterial3D_toylo")
mesh = SubResource("SphereMesh_toylo")

[node name="Arms" type="Node3D" parent="Chest"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.828942, 0)

[node name="Hand1" type="Node3D" parent="Chest/Arms"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.58, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Chest/Arms/Hand1"]
transform = Transform3D(0.416, 0, 0, 0, 0.416, 0, 0, 0, 0.416, 0, 0, 0)
mesh = SubResource("SphereMesh_4flbx")

[node name="Hand2" type="Node3D" parent="Chest/Arms"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.58, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Chest/Arms/Hand2"]
transform = Transform3D(0.416, 0, 0, 0, 0.416, 0, 0, 0, 0.416, 0, 0, 0)
mesh = SubResource("SphereMesh_4flbx")

[node name="Legs" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="Leg1" type="Node3D" parent="Legs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.27, 0, 0)

[node name="Foot1" type="Node3D" parent="Legs/Leg1" node_paths=PackedStringArray("other_leg")]
unique_name_in_owner = true
script = ExtResource("3_isnvb")
other_leg = NodePath("../../Leg2/Foot2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Legs/Leg1/Foot1"]
transform = Transform3D(0.461, 0, 0, 0, 0.461, 0, 0, 0, 0.461, 0, 0, 0)
mesh = SubResource("SphereMesh_4flbx")

[node name="Leg2" type="Node3D" parent="Legs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.27, 0, 0)

[node name="Foot2" type="Node3D" parent="Legs/Leg2" node_paths=PackedStringArray("other_leg")]
unique_name_in_owner = true
script = ExtResource("3_isnvb")
other_leg = NodePath("../../Leg1/Foot1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Legs/Leg2/Foot2"]
transform = Transform3D(0.461, 0, 0, 0, 0.461, 0, 0, 0, 0.461, 0, 0, 0)
mesh = SubResource("SphereMesh_4flbx")

[node name="Stomach" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Stomach"]
transform = Transform3D(0.494101, 0, 0, 0, 0.494101, 0, 0, 0, 0.494101, 0, 0, 0)
mesh = SubResource("SphereMesh_tb4ck")
skeleton = NodePath("../../Legs")
